layout issue

--- a/demos/breakfast/breakfast-web/src/main/resources/com/rosa/breakfast/web/stylesheet/site.css
+++ b/demos/breakfast/breakfast-web/src/main/resources/com/rosa/breakfast/web/stylesheet/site.css
@@ -1,6 +1,6 @@
 body {
   background-image: url(images/background.jpg) ;
-  width: 950px;
+  width: 850px;
   background-position: top;
   background-color:rgb(192,182,172); 
 }
